[gd_scene load_steps=3 format=3 uid="uid://7rm78j5yaeo2"]

[ext_resource type="Script" uid="uid://6yewfw0tuxpr" path="res://scripts/info_popup.gd" id="1_5hilq"]
[ext_resource type="PackedScene" uid="uid://ioadxkqkiabq" path="res://scenes/objects_components/drag_and_drop_2d.tscn" id="2_w4ov4"]

[node name="InfoPopup" type="ColorRect"]
offset_right = 246.0
offset_bottom = 149.0
color = Color(0.194349, 0.194349, 0.194349, 1)
script = ExtResource("1_5hilq")

[node name="CloseButton" type="Button" parent="."]
z_index = 1
layout_mode = 0
offset_left = 230.0
offset_top = -4.0
offset_right = 248.0
offset_bottom = 27.0
text = "X"

[node name="LabelTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.154
offset_bottom = 0.053997
grow_horizontal = 2
text = "title"

[node name="LabelDescription" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.228
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.0279961
grow_horizontal = 2
grow_vertical = 0
text = "description description description"
autowrap_mode = 2

[node name="DragAndDrop2D" parent="." node_paths=PackedStringArray("dragged_object") instance=ExtResource("2_w4ov4")]
dragged_object = NodePath("..")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
